--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ Markdown==3.8
 Pygments==2.19.1
 sqlparse==0.5.3
 typing_extensions==4.13.2
+psycopg2-binary==2.9.9
+djangorestframework-simplejwt==5.3.1
+python-dotenv==1.0.1
