--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,14 @@ Markdown==3.8
 Pygments==2.19.1
 sqlparse==0.5.3
 typing_extensions==4.13.2
+asgiref==3.8.1
+aspose-words==25.3.0
+Django==5.1.7
+django-bootstrap5==25.1
+numpy==2.2.4
+pandas==2.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.1
+six==1.17.0
+sqlparse==0.5.3
+tzdata==2025.1
