--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   ecommerce_app:
     container_name: ecommerce_app
-    image: shopApp:latest
+    image: shop_app:latest
     build: .
     volumes:
       - .:/app
