--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ inflection==0.5.1
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 Markdown==3.8
-numpy==2.2.4
+# numpy==2.2.4
 pandas==2.2.3
 pillow==11.2.1
 Pygments==2.19.1
