--- a/requirements.txt
+++ b/requirements.txt
@@ -19,10 +19,10 @@ pillow==11.2.1
 Pygments==2.19.1
 sqlparse==0.5.3
 typing_extensions==4.13.2
-psycopg2-binary==2.9.7
 djangorestframework-simplejwt==5.3.1
 python-dotenv==1.0.1
 pillow==11.2.1
 PyJWT==2.9.0
 django-rest-swagger==2.2.0
 django-cors-headers==4.7.0
+psycopg2-binary 2.9.10
