--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,4 @@ pillow==11.2.1
 PyJWT==2.9.0
 django-rest-swagger==2.2.0
 django-cors-headers==4.7.0
-psycopg2-binary 2.9.10
+psycopg2-binary==2.9.10
