--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: '3.9'
 
 services:
   ecommerce_app:
-    container_name: ecommerce_app
+    container_name: ecommerce_backend
     image: shop_app:latest
     build: .
     volumes:
       - .:/app
     ports:
-      - "7000:7000"
+      - "5000:5000"
     #env_file:
      # - .env
