--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,7 @@ services:
       - .:/app
     ports:
       - "5000:5000"
-    #env_file:
-     # - .env
+    environment:
+      - PYTHONUNBUFFERED=1
+      - DJANGO_SETTINGS_MODULE=config.settings
+    command: python manage.py runserver 0.0.0.0:5000
