--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ version: '3.9'
 services:
   ecommerce_app:
     container_name: ecommerce_backend
-    image: shop_app:latest
     build: .
     volumes:
       - .:/app
@@ -11,5 +10,6 @@ services:
       - "5000:5000"
     environment:
       - PYTHONUNBUFFERED=1
+      - PORT=5000
       - DJANGO_SETTINGS_MODULE=config.settings
-    command: python manage.py runserver 0.0.0.0:5000
+    command: ./entrypoint.sh
