--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.9'
 services:
   ecommerce_app:
     container_name: ecommerce_backend
+    image: shop_app:${BUILD_NUMBER}
     build: .
     volumes:
       - .:/app
