--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,15 @@ version: '3.9'
 
 services:
   ecommerce_app:
-    container_name: ecommerce_app
-    image: shop_app:latest
+    container_name: ecommerce_backend
+    image: shop_app:${BUILD_NUMBER}
     build: .
     volumes:
       - .:/app
     ports:
-      - "7000:7000"
-    #env_file:
-     # - .env
+      - "9000:9000"
+    environment:
+      - PYTHONUNBUFFERED=1
+      - PORT=9000
+      - DJANGO_SETTINGS_MODULE=config.settings
+    command: ./entrypoint.sh
