--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.8.1
-aspose-words==25.3.0
+# aspose-words==25.5.0 binaire mac indisponible dans docker
 attrs==25.3.0
 dj-rest-auth==7.0.1
 Django==5.2
@@ -19,11 +19,10 @@ pillow==11.2.1
 Pygments==2.19.1
 sqlparse==0.5.3
 typing_extensions==4.13.2
-psycopg2-binary==2.9.9
 djangorestframework-simplejwt==5.3.1
 python-dotenv==1.0.1
 pillow==11.2.1
-drf-yasg==1.26.0
 PyJWT==2.9.0
 django-rest-swagger==2.2.0
 django-cors-headers==4.7.0
+psycopg2-binary==2.9.10
