--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ django-cors-headers==4.7.0
 psycopg2-binary==2.9.10
 psycopg2==2.9.10
 djangorestframework-gis==1.2.0
-GDAL==3.11.0
+# GDAL==3.11.0
+GDAL==3.6.2
 pyproj==3.7.1
 shapely==2.1.1
